Change Notes
=============

2010-10-08 jbornema
	- JDBCLoader skips "" columns for table column creation
	- JDBCLoader treat String for type detection like "002123" now as String instead of Number
	- URLFileSource.IsAvailable() and getName() implemented

2010-10-02 jbornema
	- IJobContext / JobContact added
	- IRecord / Record: hasNext() and setHasNext(boolean) added to support check on following records provided by extractor
	- ICubeDataMapper.getDimensionMapping(IDimension) added
	- BaseCubeDataMapper.getDimensionMapping(IDimension) and boolean property skipMissingColumns to skip missing columns
	- DimensionMapping boolean property skipMissingColumns added
	- CubeLoader.onProcessFinished(...) clears cache of cubes to ensure during load no cached cells had been created
	- JDBCLoader.getLastReplaceOnMaxId() added, identity table columns are skipped, minor fixes,
	  protected boolean onRecordUpdated(IProcessContext processContext, IRecord record) added to support on extensions
	  additional record updates.
	- ZipSources fixed missing throw expressions
	- BooleanTransformer(String...) and default constructor added	

2010-07-22 jbornema
	- CubeLoader, ICubeDataMapper, BaseCubeDataMapper supports now ICellLoader
	- FilesSource.isAvailable checks if file.length() > 0
		
2010-07-16 FLI
	- Added integrity check
	
2010-07-14 jbornema
	- IETLProcess.addTransformer(ITransformer transformer, int index) added
	- ETLProcess property scriptFilename added which is set with the groovy script it was created by,
	  used by getResourceAsStream and getResourceAsOutputStream to find the folder to access resources in there
	- ProcessChain sets scriptFilename in ETLProcess
	- MeasureMapping added support for fixed null values when columnName is null as well
	- JDBCLoader "replace on" feature added that replaces exiting records user the auto increment PK and a list
	  of columns used as "replace on". Properties replaceOnColumns and replaceOnAutoIncrementColumn added.